--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id "com.jfrog.bintray" version "1.7.2"
+  id 'com.github.kt3k.coveralls' version '2.6.3'
 }
 
 apply plugin: 'java-gradle-plugin'
@@ -35,6 +36,7 @@ jacoco {
 
 jacocoTestReport {
   reports {
+    xml.enabled true
     html.enabled true
   }
 }
